# ACRTUDelft

./: .gitignore  .travis.yml  README.md
ACRRCApp/apk/: ACRRCApp.apk
ACRRCApp/app/: build.gradle
ACRRCApp/app/src/androidTest/java/tudelft/acr/acrrcapp/: ApplicationTest.java
ACRRCApp/app/src/main/: AndroidManifest.xml
ACRRCApp/app/src/main/java/tudelft/acr/acrrcapp/: MainActivity.java  Util.java  WifiConnection.java
ACRRCApp/app/src/main/res/layout/: activity_main.xml
ACRRCApp/app/src/main/res/values/: strings.xml
ACRRCApp/app/src/test/java/tudelft/acr/acrrcapp/: ExampleUnitTest.java
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/acr_status/: serviceMailer
catkin_ws/devel/lib/acr_udometer/: buienradar-test  udometer  udometer-test
catkin_ws/devel/lib/pkgconfig/: acr_core.pc  acr_hardware.pc  acr_status.pc  acr_udometer.pc
catkin_ws/devel/share/acr_core/cmake/: acr_coreConfig.cmake
catkin_ws/devel/share/acr_hardware/cmake/: acr_hardwareConfig.cmake
catkin_ws/devel/share/acr_status/cmake/: acr_statusConfig.cmake
catkin_ws/devel/share/acr_udometer/cmake/: acr_udometerConfig.cmake
catkin_ws/src/acr_core/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/acr_core/src/: WiFiControls.cpp  consts.hpp  core.cpp  sensorData.hpp  settings.hpp
catkin_ws/src/acr_core/src/cameraToAngle/: cameraToAngle.cpp  main.cpp  node_cameraToAngle.cpp
catkin_ws/src/acr_core/src/core/: consts.hpp  main.cpp  sensorData.cpp  sensorData.hpp
catkin_ws/src/acr_core/src/core/states/: state_approaching.cpp  state_concreteInteraction.cpp  state_interact.hpp  state_navigating.hpp  state_roaming.hpp
catkin_ws/src/acr_core/src/core/states/idle/: state_idle.cpp  state_idle.hpp
catkin_ws/src/acr_core/src/core/states/interacting/: state_concreteInteraction.cpp  state_concreteInteraction.hpp  state_interact.hpp
catkin_ws/src/acr_core/src/core/states/navigating/: state_approaching.cpp  state_approaching.hpp  state_navigating.hpp  state_roaming.cpp  state_roaming.hpp
catkin_ws/src/acr_core/src/states/: sensorData.cpp  sensorData.hpp  state.cpp  state.hpp  state_approaching.cpp  state_approaching.hpp  state_concreteInteraction.cpp  state_concreteInteraction.hpp  state_example.hpp  state_idle.cpp  state_idle.hpp  state_interact.cpp  state_interact.hpp  state_lookAround.cpp  state_lookAround.hpp  state_navigating.cpp  state_navigating.hpp  state_roaming.cpp  state_roaming.hpp
catkin_ws/src/acr_core/src/visualization/: visualization_server.cpp  visualization_server.hpp
catkin_ws/src/acr_core/test/: test_cameraToAngle.cpp  test_core_sensorData.cpp
catkin_ws/src/acr_core/test/test_cameraToAngle/: test_cameraToAngle.cpp
catkin_ws/src/acr_core/test/test_core/: test_core_sensorData.cpp
catkin_ws/src/acr_debug/: CMakeLists.txt  display.launch  package.xml  setup.py  turtle.launch
catkin_ws/src/acr_debug/src/: WiFiControls.cpp  battery_overview.py  consts.hpp  keyboard_sensors.py  module_overview.py  turtleBridge.cpp  ultrasonic_diplay.py  ultrasonic_overview.py
catkin_ws/src/acr_debug/src/WiFiControls/: WiFiControls.cpp
catkin_ws/src/acr_debug/src/battery_display/: battery_display.py
catkin_ws/src/acr_debug/src/keyboard_sensors/: keyboard_sensors.py
catkin_ws/src/acr_debug/src/module_display/: module_display.py
catkin_ws/src/acr_debug/src/turtleBridge/: turtleBridge.cpp
catkin_ws/src/acr_debug/src/ultrasonic_display/: ultrasonic_display.py
catkin_ws/src/acr_hardware/: CMakeLists.txt  package.xml  package.xml~  setup.py
catkin_ws/src/acr_hardware/src/: consts.hpp  pins.hpp  settings.hpp  turtleBridge.cpp
catkin_ws/src/acr_hardware/src/cameraToAngle/: cameraToAngle.cpp
catkin_ws/src/acr_hardware/src/engineControl/: engineControl.hpp  main.cpp  normal.hpp  tripod.hpp
catkin_ws/src/acr_hardware/src/flirLepton/: SPI.cpp  cameraToAngle.cpp  flirLepton.cpp  main.cpp  main.hpp
catkin_ws/src/acr_hardware/src/moduleControl/: main.cpp
catkin_ws/src/acr_hardware/src/simpleEngineControl/: main.cpp
catkin_ws/src/acr_hardware/src/tripodEngineControl/: main.cpp
catkin_ws/src/acr_hardware/src/turtleBridge/: turtleBridge.cpp
catkin_ws/src/acr_hardware/src/ultrasonicSensors/: ultrasonicSensors.cpp
catkin_ws/src/acr_launch/: CMakeLists.txt  package.xml
catkin_ws/src/acr_launch/launch/: robot.launch
catkin_ws/src/acr_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/acr_msgs/msg/: ModuleState.msg  Ultrasonic.msg
catkin_ws/src/acr_udometer/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/acr_udometer/msg/: Udometer.msg
catkin_ws/src/acr_udometer/src/: buienradar.cpp  buienradar.hpp  udometer.cpp  udometer.hpp
catkin_ws/src/acr_udometer/test/: test_buienradar.cpp  test_udometer.cpp
