<?xml version="1.0"?>
<package>
	<name>acr_core</name>
	<version>0.1.0</version>
	<description>The acr_core package. Contains all nodes needed for the behaviour of the robot and processing of sensor data.</description>

	<maintainer email="acr.tudelft@gmail.com">ACR Team</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>vision_opencv</build_depend>
	<build_depend>libqt4-dev</build_depend>
	<build_depend>image_transport</build_depend>

	<build_depend>acr_msgs</build_depend>
	<build_depend>acr_udometer</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>vision_opencv</run_depend>
	<run_depend>libqt4-dev</run_depend>
	<run_depend>image_transport</run_depend>

	<run_depend>acr_msgs</run_depend>
	<run_depend>acr_udometer</run_depend>
	<run_depend>message_runtime</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	<!-- Other tools can request additional information be placed here -->

	</export>
</package>
