<?xml version="1.0"?>
<package>
  <name>acr_launch</name>
  <version>0.0.1</version>
  <description>A package containing launch files for the robot</description>

  <author email="chielbruin@tele2.nl">Chiel Bruin</author>
  <maintainer email="acr.tudelft@gmail.com">ACR Team</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>roslaunch</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export> </export>
</package>