<?xml version="1.0"?>
<package>
	<name>acr_msgs</name>
	<version>1.0.0</version>
	<description>Package containing messages used by the ACR robot.</description>

	<maintainer email="acr.tudelft@gmail.com">ACR Team</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<url type="repository">https://github.com/ChielBruin/tomatenplukkers</url>


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

	<export> </export>
</package>
